# learnOpenCV

./: README.md
api/ObjectTracking/: CMakeLists.txt  Dockerfile  docker-compose.yml  tracker.cpp
